# deskpane

./: README.md  deskpane.spec  pyproject.toml
deskpane/: __main__.py  app.py
deskpane/templates/: embed.html
